# unboxer

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: unboxer-config.cmake.in
src/: CMakeLists.txt  blobextractor.cpp  blobextractor.h  box.h  box_reader.h  boxreader.cpp  boxreader.h  boxreader_impl.cpp  boxreader_impl.h  cacher.h  error.h  input.h  input_streamer.h  inputfile_impl.cpp  inputfile_impl.h  inputhttp_impl.cpp  inputhttp_impl.h  inputmemory_impl.cpp  inputmemory_impl.h  inputmemoryimpl.cpp  inputmemoryimpl.h  inputstreamer.h  reason.h  status.h  unboxer.cpp  unboxer.h  unboxer_impl.cpp  unboxer_impl.h  uncachedfileunboxer.cpp  uncachedfileunboxer.h
test/: CMakeLists.txt  dummy.cpp  mem_streamer.cpp  mem_unboxer.cpp  null_unboxer.cpp
tools/: CMakeLists.txt  mdatregistry.cpp  mdatregistry.h  mp4crawler.cpp
